# GLFS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  benchmark_report.csv  trace_glfs.perfetto.json
configs/: default.json
plans/: GLFS SPEC.md  GPULearnedFS 实施计划（人类可读版 · QA格式）.md  spec编写指南.md
scripts/: create_random_backing_root_files.py  generate_dataset.py  mount.sh  plot_results.py  run_benchmarks.sh  umount.sh  wsl2_setup.sh
src/: glfs.h  main.cpp
src/benchmark/: driver_main.cpp  mount_daemon_main.cpp  runner.cpp  runner.h
src/config/: config_manager.cpp  config_manager.h
src/core/: backend_common.cpp  gpu_control_plane.cu  gpu_index_adapter.cpp  gpu_index_adapter.h  path_encoder.cpp  path_encoder.h
src/core/backends/cu_learned/: backend.cpp
src/core/backends/g_index/: backend.cpp  backend.cu
src/core/backends/ligpu/: backend.cpp
src/core/backends/pgm_gpu/: backend.cpp
src/core/backends/rmi_cuda/: backend.cpp
src/fuse/: backing_root_proxy.cpp  backing_root_proxy.h  client_api.cpp  client_api.h  gpufs_ops.cpp  gpufs_ops.h
src/utils/: json_parser.cpp  json_parser.h  perfetto_categories.cpp  perfetto_categories.h  perfetto_integration.cpp  perfetto_integration.h  timer.h
tests/: test_main.cpp
